# admissibility-kernel

./: .gitignore  CLAIM_BOUNDARY.md  LICENSE.md  NOTICE.md  PROVENANCE.md  PUBLICATION_NOTES.md  README.md  REPO_MAP.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ADJACENT_WORK_BOUNDARY.md  ARCHITECTURE.md  CONTEXT_TO_CONSEQUENCE.md  GITHUB_IDENTITY_ROUTE.md  HUMAN_BEFORE_THE_LOOP.md  PUBLIC_CLAIM_CEILING.md  README_FORMATTING_NOTES.md  REFERENCE_SURFACE_RELATION.md  SELF_SERVICE_BUILD_AND_LEARN.md  TRACECLAIM.md  WEBSITE_BRIDGE.md
examples/: 01_basic_gate.py  02_defer_when_context_is_insufficient.py  03_transform_when_branch_isolation_fails.py  04_reject_when_future_transformation_is_destroyed.py  05_valid_surface_inadmissible_commitment.py  tracebench_to_traceclaim_to_candidate.md
schemas/: admissibility_decision_record.schema.v0.1.json  recursive_viability_record.schema.v0.1.json  traceclaim.schema.json  transformability_preservation_record.schema.v0.1.json
src/neverthought_admissibility/: __init__.py  gate.py  outcome.py  projection.py  records.py  tpi.py  viability.py
tests/: test_gate.py  test_viability.py  test_wrong_surface.py
